# CMB_USR

./: .coverage  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUGS.md  CLAUDE.md  GEMINI.md  PLANNING.md  PUNCTUATED_INFLATION_MATCH.md  branch-state.excalidraw  cmb-architecture.d2  environment.yml  fortran_ms_solver.py  inf_dyn_MS_full.py  inf_dyn_background.py  numba_ms_solver.py  numerical_observables_calculation.py  opencode.json  package-lock.json  package.json  pspectrum_pipeline.py  pyproject.toml  setup.sh
configs/: asteroid_pbh.json  ezquiaga_a1p0_b1p3.json  ezquiaga_beta1e-5.json  ezquiaga_paper.json  ezquiaga_paper_reference.json  ezquiaga_perfect.json  ezquiaga_top_rank.json  ezquiaga_tweaked.json  higgs_sanity.json  subsolar_pbh.json
diagrams/: cmb-architecture.excalidraw
fortran/: Makefile  bench_quick.py  ms_solver.f90  test_vs_numba.py
legacy/: benchmark_numba_exhaustive.py  test_numba_convergence.py
models/: Smooth_USR.py  __init__.py  base.py  ezquiaga_chi.py  higgs.py  higgs_critical.py  punctuated.py  standard.py  starobinsky.py
notebooks/: 04_PowerLoss_Explorer.ipynb  CAMB_vs_SW_Comparison.ipynb  Golden_Config_Comparison.ipynb  Phase1_Background_Survey.ipynb  Phase2_Full_PSpectrum.ipynb  Phase3_CMB_Power.ipynb  USR_CMB_PowerLoss_overview.ipynb  USR_PowerLoss.ipynb  USR_PowerLoss_Plots.ipynb  gen-camb-boltzmann.ipynb  gen-camb-wrapper.ipynb
scripts/: accretion.py  analyze_chi2_discrepancy.py  analyze_sweep_results.py  background_scan.py  batch_top_pbh.py  bench_compaction.py  benchmark_numba.py  benchmark_time.py  camb_recompute_full_chi2.py  camb_scan.py  camb_scan_dashboard.py  camb_wrapper.py  check_cache.py  check_full_dell.py  chi2_analysis.py  compaction.py  compaction_diagnostics.py  compare_models.py  compare_ns_methods.py  compare_ns_vs_x0.py  compare_old_scan.py  compute_sr_ms.py  config_loader.py  consolidate_pbh_data.py  constants.py  constraint_mapping.py  env_setup.sh  explorer.py  ezquiaga_diagnostics.py  ezquiaga_ms_crosscheck.py  ezquiaga_ps_check.py  fig6_ns_vs_x0.py  full_pbh_pipeline.py  generate_plot_companions.py  higgs_optimizer.py  higgs_usr_optimizer.py  monitor_and_chain_sweep.py  ns_vs_x0_plot.py  numba_vs_python_profile.py  observables.py  (+47 more)
tests/: conftest.py  manual_smoke_botorch_pbh.sh  test_accretion.py  test_agents_md_no_chi2.py  test_background.py  test_camb_validation.py  test_chi2_script_missing.py  test_compaction.py  test_constraint_mapping.py  test_ezquiaga.py  test_ezquiaga_pbh.py  test_find_end.py  test_fortran_backend.py  test_notebook_no_chi2_import.py  test_ns_methods.py  test_optimize_pbh_botorch.py  test_pbh.py  test_planck_chi2.py  (+3 more)
(+50 files in other folders)
