[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "cmb-anomaly"
version = "0.1.0"
description = "CMB low-ell anomaly analysis: Higgs USR"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22,<3.0",
    "scipy>=1.10,<2.0",
    "matplotlib>=3.5,<4.0",
    "numba>=0.56,<1.0",
    "camb>=1.4,<2.0",
    "tqdm>=4.60,<5.0",
    "scikit-learn>=1.3,<2.0",
    "joblib>=1.3,<2.0",
    "torch>=2.0,<3.0",
    "gpytorch>=1.11,<2.0",
    "botorch>=0.11,<1.0",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-mock"]
dev = ["pytest", "pytest-cov", "pytest-mock", "jupyter", "ipykernel"]

[tool.setuptools.packages.find]
include = ["models*", "scripts*"]

[tool.setuptools]
py-modules = ["inf_dyn_background", "inf_dyn_MS_full", "numba_ms_solver", "pspectrum_pipeline", "fortran_ms_solver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "fast: unit tests that run quickly with no external dependencies",
    "integration: background integration tests that exercise the ODE solver over the full T_max range",
    "slow: integration tests that require solvers, CAMB, or model files",
]
addopts = "-v --tb=short"
